@@ -421,10 +421,7 @@
                         (MAPCAR #'(LAMBDA (NEXT-METHOD)
                                     (IF (TYPEP NEXT-METHOD <METHOD>)
                                       NEXT-METHOD ; no need to quote, since self-evaluating
-                                      ;; During bootstrap, the only used method-class is <standard-method>.
-                                      ;; After bootstrap, make-instance-<standard-method> is the same
-                                      ;; as the general make-instance.
-                                      (LIST 'MAKE-INSTANCE-<STANDARD-METHOD>
+                                      (LIST 'MAKE-METHOD-INSTANCE
                                         '',(std-gf-default-method-class gf)
                                         ''FAST-FUNCTION
                                           (LET ((CONT (GENSYM)))
